--- a/templates/telephone_portable/show.html.twig
+++ b/templates/telephone_portable/show.html.twig
@@ -111,16 +111,16 @@
                                     <thead class="bg-200 text-900">
                                         <tr>
                                             <th class="align-middle text-center">#</th>
-                                            <th class="align-middle text-center">Ligne</th>
-                                            <th class="align-middle text-center">IMEI 1</th>
-                                            <th class="align-middle text-center">IMEI 2</th>
-                                            <th class="align-middle text-center">Numéro de série</th>
-                                            <th class="align-middle text-center">Utilisateur</th>
-                                            <th class="align-middle text-center">Site</th>
-                                            <th class="align-middle text-center">Date d'installation</th>
-                                            <th class="align-middle text-center">Date d'achat</th>
-                                            <th class="align-middle text-center">Date de garantie</th>
-                                            <th class="align-middle text-center">Commentaire</th>
+                                            <th class="align-middle text-center">{% if selectedRecherche == 'ligne' %} <span class="badge bg-primary">Ligne</span> {% else %} Ligne {% endif %}</th>
+                                            <th class="align-middle text-center">{% if selectedRecherche == 'imei1' %} <span class="badge bg-primary">IMEI 1</span> {% else %} IMEI 1 {% endif %}</th>
+                                            <th class="align-middle text-center">{% if selectedRecherche == 'imei2' %} <span class="badge bg-primary">IMEI 2</span> {% else %} IMEI 2 {% endif %}</th>
+                                            <th class="align-middle text-center">{% if selectedRecherche == 'numero_serie' %} <span class="badge bg-primary">Numéro de série</span> {% else %} Numéro de série {% endif %}</th>
+                                            <th class="align-middle text-center">{% if selectedRecherche == 'utilisateur_id' %} <span class="badge bg-primary">Utilisateur</span> {% else %} Utilisateur {% endif %}</th>
+                                            <th class="align-middle text-center">{% if selectedRecherche == 'entreprise_id' %} <span class="badge bg-primary">Site</span> {% else %} Site {% endif %}</th>
+                                            <th class="align-middle text-center">{% if selectedRecherche == 'date_installation' %} <span class="badge bg-primary">Date d'installation</span> {% else %} Date d'installation {% endif %}</th>
+                                            <th class="align-middle text-center">{% if selectedRecherche == 'date_achat' %} <span class="badge bg-primary">Date d'achat</span> {% else %} Date d'achat {% endif %}</th>
+                                            <th class="align-middle text-center">{% if selectedRecherche == 'date_garantie' %} <span class="badge bg-primary">Date de garantie</span> {% else %} Date de garantie {% endif %}</th>
+                                            <th class="align-middle text-center">{% if selectedRecherche == 'commentaire' %} <span class="badge bg-primary">Commentaire</span> {% else %} Commentaire {% endif %}</th>
                                             <th class="align-middle text-center">Action</th>
                                         </tr>
                                     </thead>
@@ -157,7 +157,9 @@
                                                         {{ telephone.dateGarantie | default('<span class="badge bg-danger">N/A</span>') | raw }}
                                                     </td>
                                                     <td class="text-nowrap">
-                                                        {{ telephone.commentaire | default('<span class="badge bg-danger">N/A</span>') | raw }}
+                                                        <span class="d-inline-block text-truncate" style="max-width: 270px;">
+                                                            {{ telephone.commentaire | default('<span class="badge bg-danger">N/A</span>') | raw }}
+                                                        </span>
                                                     </td>
                                                     <td class="text-nowrap">
                                                         <a href="{{ path('admin.telephone_portable.edit', {id: telephone.id}) }}" class="btn btn-primary btn-sm">
