--- a/templates/utilisateur/show.html.twig
+++ b/templates/utilisateur/show.html.twig
@@ -79,9 +79,15 @@
                                     </thead>
                                     <tbody class="list">
                                         {% if utilisateurs | length != 0 %}
+
+                                            {% set globalIndex = total - (page - 1) * limit %}
+
                                             {% for utilisateur in utilisateurs %}
+
+                                                {% set currentIndex = globalIndex - (loop.index - 1) %}
+
                                                 <tr class="align-middle text-center">
-                                                    <td class="text-nowrap">{{ utilisateur.id }}</td>
+                                                    <td class="text-nowrap">{{ currentIndex }}</td>
                                                     <td class="text-nowrap">
                                                         <a href="{{ path('admin.utilisateur.edit', {id: utilisateur.id}) }}"><b>{{ utilisateur.nom }} {{ utilisateur.prenom }}</b></a>
                                                     </td>
