--- a/templates/fournisseur/show.html.twig
+++ b/templates/fournisseur/show.html.twig
@@ -62,9 +62,15 @@
                                     </thead>
                                     <tbody class="list">
                                         {% if fournisseurs | length != 0 %}
+
+                                            {% set globalIndex = total - (page - 1) * limit %}
+
                                             {% for fournisseur in fournisseurs %}
+
+                                                {% set currentIndex = globalIndex - (loop.index - 1) %}
+
                                                 <tr class="align-middle text-center">
-                                                    <td class="text-nowrap">{{ fournisseur.id }}</td>
+                                                    <td class="text-nowrap">{{ currentIndex }}</td>
                                                     <td class="text-nowrap">
                                                         <a href="{{ path('admin.fournisseur.edit', {id: fournisseur.id}) }}"><b>{{ fournisseur.nom }}</b></a>
                                                     </td>
