--- a/templates/stockage/show.html.twig
+++ b/templates/stockage/show.html.twig
@@ -62,9 +62,15 @@
                                     </thead>
                                     <tbody class="list">
                                         {% if stockages | length != 0 %}
+
+                                            {% set globalIndex = total - (page - 1) * limit %}
+
                                             {% for stockage in stockages %}
+
+                                                {% set currentIndex = globalIndex - (loop.index - 1) %}
+
                                                 <tr class="align-middle text-center">
-                                                    <td class="text-nowrap">{{ stockage.id }}</td>
+                                                    <td class="text-nowrap">{{ currentIndex }}</td>
                                                     <td class="text-nowrap">
                                                         <a href="{{ path('admin.stockage.edit', {id: stockage.id}) }}"><b>{{ stockage.nom }}</b></a>
                                                     </td>
