update: count array for gestion

--- a/templates/ecran/show.html.twig
+++ b/templates/ecran/show.html.twig
@@ -124,11 +124,15 @@
                                     </thead>
                                     <tbody class="list">
                                         {% if ecrans | length != 0 %}
+
+                                            {% set globalIndex = total - (page - 1) * limit %}
+
                                             {% for ecran in ecrans %}
+
+                                                {% set currentIndex = globalIndex - (loop.index - 1) %}
+
                                                 <tr class="align-middle text-center">
-                                                    <td class="text-nowrap">
-                                                        {{ ecran.id }}
-                                                    </td>
+                                                    <td class="text-nowrap">{{ currentIndex }}</td>
                                                     <td class="text-nowrap">
                                                         <a href="{{ path('admin.ecran.edit', {id: ecran.id}) }}">
                                                             <b>{{ ecran.nom }}</b>
