--- a/templates/pc_fixe/show.html.twig
+++ b/templates/pc_fixe/show.html.twig
@@ -128,9 +128,15 @@
                                     </thead>
                                     <tbody class="list">
                                         {% if pcFixes | length != 0 %}
+
+                                            {% set globalIndex = total - (page - 1) * limit %}
+
                                             {% for pcFixe in pcFixes %}
+
+                                                {% set currentIndex = globalIndex - (loop.index - 1) %}
+
                                                 <tr class="align-middle text-center">
-                                                    <td class="text-nowrap">{{ pcFixe.id }}</td>
+                                                    <td class="text-nowrap">{{ currentIndex }}</td>
                                                     <td class="text-nowrap">
                                                         <a href="{{ path('admin.pc_fixe.edit', {id: pcFixe.id}) }}"><b>{{ pcFixe.nom }}</b></a>
                                                     </td>
