--- a/templates/onduleur/show.html.twig
+++ b/templates/onduleur/show.html.twig
@@ -126,9 +126,15 @@
                                     </thead>
                                     <tbody class="list">
                                         {% if onduleurs | length != 0 %}
+
+                                            {% set globalIndex = total - (page - 1) * limit %}
+
                                             {% for onduleur in onduleurs %}
+
+                                                {% set currentIndex = globalIndex - (loop.index - 1) %}
+
                                                 <tr class="align-middle text-center">
-                                                    <td class="text-nowrap">{{ onduleur.id }}</td>
+                                                    <td class="text-nowrap">{{ currentIndex }}</td>
                                                     <td class="text-nowrap">
                                                         <a href="{{ path('admin.onduleur.edit', {id: onduleur.id}) }}">
                                                             <b>{{ onduleur.nom }}</b>
